initial edits to index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 
 <head>
-    <title> Assignment 1 </title>
+    <title> Nemo's World </title>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 
 <body>
     <h1>Welcome to Finding Nemo!</h1>
+    <h3>Find out who's in Finding Nemo:</h3>
+    <div class="link">
+        <a href="nemo.html">Nemo</a>
+    </div>
 </body>
