--- a/index.html
+++ b/index.html
@@ -2,13 +2,26 @@
 
 <head>
     <title> Nemo's World </title>
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/animal.css">
 </head>
 
 <body>
     <h1>Welcome to Finding Nemo!</h1>
-    <h3>Find out who's in Finding Nemo:</h3>
+    <h2>Find out who's in Finding Nemo:</h2>
+    
     <div class="link">
-        <a href="nemo.html">Nemo</a>
+        <button type="button">
+            <a href="Nemo.html">Nemo the Clownfish</a>
+        </button>
+        <button type="button">
+            <a href="Bruce.html">Bruce the Shark</a>
+        </button>
+        <button type="button">
+            <a href="Squirt.html">Squirt the Turtle</a>
+        </button>
+        <button type="button">
+            <a href="Nigel.html">Nigel the Pelican</a>
+        </button>
     </div>
+    
 </body>
