Edited css file href link

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title> Nemo's World </title>
-    <link rel="stylesheet" type="text/css" href="css/animal.css">
+    <link rel="stylesheet" href="animal.css">
 </head>
 
 <body>
@@ -23,5 +23,5 @@
             <a href="Nigel.html">Nigel the Pelican</a>
         </button>
     </div>
-    
+
 </body>
