Edited css file for homepage file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title> Nemo's World </title>
-    <link rel="stylesheet" href="animal.css">
+    <link rel="stylesheet" href="index.css"/>
 </head>
 
 <body>
