--- a/Bruce.html
+++ b/Bruce.html
@@ -28,7 +28,7 @@
 
             <main>
                 <div class="img1">
-                    <img height="500"width="560" src="https://images.baklol.com/7_jpeg88c63a0f758004934cdf4bfbddc8dfa9.jpeg" alt="BRUCE!"/>
+                    <img height="500"width="560" src="transparent-bruce.png" alt="BRUCE!"/>
                 </div>
               <br>
               <br>
