--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 
 <body>
-    <h1>Welcome to Finding Nemo!</h1>
-    <h2>Find out who's in Finding Nemo:</h2>
+    <h1>Welcome To</h1>
+    <img src="nemo.png" alt="nemo" width=auto height="150">
+    <h2>Find out which animals are in "Finding Nemo" by clicking below!</h2>
     
     <div class="link">
         <button type="button">
