--- a/nigel.html
+++ b/nigel.html
@@ -18,28 +18,27 @@
                 <span class="title">
                     <h1><big>NIGEL</big></h1>
                 </span>
-                <p class="specs">7-14 lbs, Adult Male 3-4ft<p>
+                <p class="specs">7-14 lbs, Adult Male, 3-4ft<p>
                 <!-- <p class="quote"><small>“Sorry if I ever took a snap at you. Fish gotta swim, birds gotta eat.” -->
-                <div class="box3 sb13">“Sorry if I ever took a snap at you. Fish gotta swim, birds gotta eat.”</div>
-                </small><p>
+                <div class="box3 sb13"><small>“Sorry if I ever took a snap at you. Fish gotta swim, birds gotta eat.”</div>
+                </small>
             </header>
             <hr>
 
             <main>
                 <div class="img1">
                     <img src="nigel.png" alt="NIGEL!"/>
+                    <!-- <img src="pelican.jpeg" alt="Pelican!"/> -->
                 </div>
-              <br>
-              <br>
 
-            <div class="box3 sb13">Species: Pelican<br>
+            <!-- <div class="box3 sb13">Species: Pelican<br>
                 Home: Atlantic, Pacific, and Gulf Coasts<br>
                 The Pelican is one of the largest birds in the world. 
                 They can be found on every continent except for Antarctica, 
                 although they prefer warmer areas so they live in temperate and tropical areas and avoid cold areas. 
                 They are characterized by a long beak and are best known for large pouches of skin hanging down from their bills. 
                 These pouches or "gular sac" are used to scoop up their prey from the water and drain the water before swallowing.
-            </div>
+            </div> -->
             <!-- <p class="blurb">Species: Pelican<br>
             Home: Atlantic, Pacific, and Gulf Coasts<br>
             The Pelican is one of the largest birds in the world. 
@@ -48,17 +47,25 @@
             They are characterized by a long beak and are best known for large pouches of skin hanging down from their bills. 
             These pouches or "gular sac" are used to scoop up their prey from the water and drain the water before swallowing.
             </p> -->
+            <p><span class="highlightme">
+            Species: Pelican<br>
+            Home: Atlantic, Pacific, and Gulf Coasts<br>
+            The Pelican is one of the largest birds in the world. 
+            They can be found on every continent except for Antarctica, 
+            although they prefer warmer areas so they live in temperate and tropical areas and avoid cold areas. 
+            They are characterized by a long beak and are best known for large pouches of skin hanging down from their bills. 
+            These pouches or "gular sac" are used to scoop up their prey from the water and drain the water before swallowing.
+            </span>
+            </p>    
             <!--Adjust As Needed Based On Blurb Length-->
             <br>
             <br>
-            <br>
-            <br>
-            <br>
+
 
     </body>
     <div class="btn-area">
-        <a href="../form.html" class="recp-btn"><b>Home!</b></a>
-     </div>
+        <a href="index.html"><b>Home!</b></a>
+    </div>
  </div>
 
 </html>
