Switched Image positions and resized

--- a/Bruce.html
+++ b/Bruce.html
@@ -26,12 +26,12 @@
             <hr>
 
             <div class="img2">
-                <img height ="300"width="300"src="transparent_GWS.png" alt="real Great White Shark">
+                <img height ="400"width="400"src="transparent-bruce.png" alt="real Great White Shark">
             </div>
 
             <main>
                 <div class="img1">
-                    <img height="500"width="560" src="transparent-bruce.png" alt="BRUCE!"/>
+                    <img height="500"width="560" src="transparent_GWS.png" alt="BRUCE!"/>
                 </div>
               <br>
               <br>
