adding unified css and real turtle image

--- a/squirt.html
+++ b/squirt.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <meta name="author" content="Mariam, Sanjidah, Heaven">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- viewport takes care of device scaling, figure out how to import javascript and bootstrap stuff-->
         <title>Squirt</title>
         <link rel="stylesheet" href="animal.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
@@ -19,33 +18,53 @@
                     <h1><big>SQUIRT</big></h1>
                 </span>
                 <p class="specs">1/2 lb, Baby Male 2 in<p>
-                <p class="quote"><small>"Remember: rip it, roll it, and punch it.”
-
-                </small><p>
+                    <div class="box3 sb13">
+                        <small>
+                            "Remember: rip it, roll it, and punch it."
+                        </small>
+                    </div>
+                <p>
             </header>
-            <hr>
 
+            <div class="img2">
+                <img height="500"width="700" src="http://assets.stickpng.com/images/58f37928a4fa116215a9241b.png" alt="SQUIRT!"/>
+            </div>
+
+            <hr>
             <main>
                 <div class="img1">
-                    <img height="500"width="560" src="https://lumiere-a.akamaihd.net/v1/images/squirt-from-finding-nemo_2db4af45.jpeg" alt="SQUIRT!"/>
+                    <img height="500"width="560" src="https://media.fisheries.noaa.gov/styles/original/s3/dam-migration/640x427-hawksbill-turtle.png?null&itok=4legGRwl" alt="SEATURTLE!"/>
                 </div>
               <br>
               <br>
-            <p class="blurb">Species: Sea Turtle<br>
-            Home: Great Barrier Reef<br>
-            Sea turtles are a migratory species and can be found all around the world in cold waters to warm beaches. Sea turtles mate at sea, then come ashore on beaches to lay their eggs. After laying their eggs in a hole in the sand the females go back to sea. After 60 days the baby sea turtles hatch and have to make the dangerous journey from the next to the water. Natural light at the horizon guides the hatchings to the ocean. Once in the water they go out to survive and grow to be adult sea turtles eventually.
-            </p>
+              <p>
+                  <span class="highlightme">
+                      Species: Sea Turtle
+                      <br>
+                      Home: Great Barrier Reef
+                      <br>
+                      Sea turtles are a migratory species and can be found all around the world in cold waters to warm beaches. 
+                      Sea turtles mate at sea, then come ashore on beaches to lay their eggs. 
+                      After laying their eggs in a hole in the sand the females go back to sea. 
+                      After 60 days the baby sea turtles hatch and have to make the dangerous journey from the nest to the water. 
+                      Natural light at the horizon guides the hatchlings to the ocean. 
+                      Once in the water they go out to survive and grow to be adult sea turtles eventually.
+                  </span>    
+              </p>
             <!--Adjust As Needed Based On Blurb Length-->
             <br>
             <br>
             <br>
             <br>
             <br>
-
+            </main>
+        </div>
     </body>
     <div class="btn-area">
-        <a href="../form.html" class="recp-btn"><b>Home!</b></a>
-     </div>
- </div>
-
+        <a href="index.html" class="recp-btn">
+            <b>
+                Home!
+            </b>
+        </a>
+    </div>
 </html>
