changing img dimensions and quote font size

--- a/nemo.html
+++ b/nemo.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="author" content="Mariam, Sanjidah, Heaven">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Squirt</title>
+        <title>Nemo</title>
         <link rel="stylesheet" href="animal.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -27,13 +27,13 @@
             </header>
 
             <div class="img2">
-                <img height="500"width="700" src="http://assets.stickpng.com/images/58f37995a4fa116215a92421.png" alt="NEMO!"/>
+                <img height="500"width="650" src="http://assets.stickpng.com/images/58f37995a4fa116215a92421.png" alt="NEMO!"/>
             </div>
 
             <hr>
             <main>
                 <div class="img1">
-                    <img height="500"width="560" src="https://lh3.googleusercontent.com/proxy/yWnw2mWhDw0zV4B8mAAXuD3wHohi8C_2KlMGI-FoMOGQvgr-o0f2UuRgAHBgsa4RKOhOzGJ6YtvSOpVndrF29IoxMu82lZLl5f0CuzjhrBNdfdwyDR2XNDznK3CyaSWW3mx6vRxIl5h6gZ_Vg5M" alt="CLOWNFISH!"/>
+                    <img height="500"width="650" src="https://lh3.googleusercontent.com/proxy/yWnw2mWhDw0zV4B8mAAXuD3wHohi8C_2KlMGI-FoMOGQvgr-o0f2UuRgAHBgsa4RKOhOzGJ6YtvSOpVndrF29IoxMu82lZLl5f0CuzjhrBNdfdwyDR2XNDznK3CyaSWW3mx6vRxIl5h6gZ_Vg5M" alt="CLOWNFISH!"/>
                 </div>
               <br>
               <br>
