--- a/nigel.html
+++ b/nigel.html
@@ -4,9 +4,8 @@
         <meta charset="utf-8">
         <meta name="author" content="Mariam, Sanjidah, Heaven">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- viewport takes care of device scaling, figure out how to import javascript and bootstrap stuff-->
         <title>Nigel</title>
-        <link rel="stylesheet" href="nigel.css">
+        <link rel="stylesheet" href="animal.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
@@ -19,53 +18,50 @@
                     <h1><big>NIGEL</big></h1>
                 </span>
                 <p class="specs">7-14 lbs, Adult Male, 3-4ft<p>
-                <!-- <p class="quote"><small>“Sorry if I ever took a snap at you. Fish gotta swim, birds gotta eat.” -->
-                <div class="box3 sb13"><small>“Sorry if I ever took a snap at you. Fish gotta swim, birds gotta eat.”</div>
-                </small>
+                    <div class="box3 sb13">
+                        <small>
+                            “Sorry if I ever took a snap at you. Fish gotta swim, birds gotta eat.”
+                        </small>
+                    </div>
+                <p>
+            
             </header>
-            <hr>
 
+            <div class="img2">
+                <img height="500" width="650" src="pelican.png" alt="Pelican!"/>
+            </div>
+
+            <hr>
             <main>
                 <div class="img1">
-                    <img src="nigel.png" alt="NIGEL!"/>
-                    <!-- <img src="pelican.jpeg" alt="Pelican!"/> -->
+                    <img height="500" width=auto src="nigel.png" alt="NIGEL!"/>
                 </div>
-
-            <!-- <div class="box3 sb13">Species: Pelican<br>
-                Home: Atlantic, Pacific, and Gulf Coasts<br>
-                The Pelican is one of the largest birds in the world. 
-                They can be found on every continent except for Antarctica, 
-                although they prefer warmer areas so they live in temperate and tropical areas and avoid cold areas. 
-                They are characterized by a long beak and are best known for large pouches of skin hanging down from their bills. 
-                These pouches or "gular sac" are used to scoop up their prey from the water and drain the water before swallowing.
-            </div> -->
-            <!-- <p class="blurb">Species: Pelican<br>
-            Home: Atlantic, Pacific, and Gulf Coasts<br>
-            The Pelican is one of the largest birds in the world. 
-            They can be found on every continent except for Antarctica, 
-            although they prefer warmer areas so they live in temperate and tropical areas and avoid cold areas. 
-            They are characterized by a long beak and are best known for large pouches of skin hanging down from their bills. 
-            These pouches or "gular sac" are used to scoop up their prey from the water and drain the water before swallowing.
-            </p> -->
-            <p><span class="highlightme">
-            Species: Pelican<br>
-            Home: Atlantic, Pacific, and Gulf Coasts<br>
-            The Pelican is one of the largest birds in the world. 
-            They can be found on every continent except for Antarctica, 
-            although they prefer warmer areas so they live in temperate and tropical areas and avoid cold areas. 
-            They are characterized by a long beak and are best known for large pouches of skin hanging down from their bills. 
-            These pouches or "gular sac" are used to scoop up their prey from the water and drain the water before swallowing.
-            </span>
-            </p>    
-            <!--Adjust As Needed Based On Blurb Length-->
-            <br>
-            <br>
-
-
-    </body>
-    <div class="btn-area">
-        <a href="index.html"><b>Home!</b></a>
-    </div>
- </div>
-
+                <br>
+                <br>
+                <p>
+                    <span class="highlightme">
+                        Species: Pelican <br>
+                        Home: Atlantic, Pacific, and Gulf Coasts <br>
+                        The Pelican is one of the largest birds in the world. They can be found on every continent except for Antarctica, 
+                        although they prefer warmer areas so they live in temperate and tropical areas and avoid cold areas. 
+                        They are characterized by a long beak and are best known for large pouches of skin hanging down from their bills. 
+                        These pouches or "gular sac" are used to scoop up their prey from the water and drain the water before swallowing.
+                    </span>
+                </p>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                </main>
+            </div>
+        </body>
+        
+        <div class="btn-area">
+          <a href="index.html">
+            <b> 
+                Home!
+            </b>
+          </a>
+        </div>
 </html>
