Correct html links added and different css styling

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     
     <div class="link">
         <button type="button">
-            <a href="Nemo.html">Nemo the Clownfish</a>
+            <a href="nemo.html">Nemo the Clownfish</a>
         </button>
         <button type="button">
-            <a href="Bruce.html">Bruce the Shark</a>
+            <a href="bruce.html">Bruce the Shark</a>
         </button>
         <button type="button">
-            <a href="Squirt.html">Squirt the Turtle</a>
+            <a href="squirt.html">Squirt the Turtle</a>
         </button>
         <button type="button">
-            <a href="Nigel.html">Nigel the Pelican</a>
+            <a href="nigel.html">Nigel the Pelican</a>
         </button>
     </div>
 
