Corrected Bruce html file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="nemo.html">Nemo the Clownfish</a>
         </button>
         <button type="button">
-            <a href="bruce.html">Bruce the Shark</a>
+            <a href="Bruce.html">Bruce the Shark</a>
         </button>
         <button type="button">
             <a href="squirt.html">Squirt the Turtle</a>
