--- a/nemo.html
+++ b/nemo.html
@@ -27,13 +27,13 @@
             </header>
 
             <div class="img2">
-                <img height="500"width="650" src="http://assets.stickpng.com/images/58f37995a4fa116215a92421.png" alt="NEMO!"/>
+                <img height="500"width="650" src="nemo-transparent.png" alt="NEMO!"/>
             </div>
 
             <hr>
             <main>
                 <div class="img1">
-                    <img height="500"width="650" src="https://lh3.googleusercontent.com/proxy/yWnw2mWhDw0zV4B8mAAXuD3wHohi8C_2KlMGI-FoMOGQvgr-o0f2UuRgAHBgsa4RKOhOzGJ6YtvSOpVndrF29IoxMu82lZLl5f0CuzjhrBNdfdwyDR2XNDznK3CyaSWW3mx6vRxIl5h6gZ_Vg5M" alt="CLOWNFISH!"/>
+                    <img height="500"width="650" src="clownfish-transparent.png" alt="CLOWNFISH!"/>
                 </div>
               <br>
               <br>
