--- a/squirt.html
+++ b/squirt.html
@@ -27,13 +27,13 @@
             </header>
 
             <div class="img2">
-                <img height="500"width="650" src="http://assets.stickpng.com/images/58f37928a4fa116215a9241b.png" alt="SQUIRT!"/>
+                <img height="500"width="650" src="squirt-transparent.png" alt="SQUIRT!"/>
             </div>
 
             <hr>
             <main>
                 <div class="img1">
-                    <img height="500"width="650" src="https://media.fisheries.noaa.gov/styles/original/s3/dam-migration/640x427-hawksbill-turtle.png?null&itok=4legGRwl" alt="SEATURTLE!"/>
+                    <img height="500"width="650" src="seaturtle-transparent.png" alt="SEATURTLE!"/>
                 </div>
               <br>
               <br>
