adding bold text to all animal pages

--- a/nemo.html
+++ b/nemo.html
@@ -15,12 +15,14 @@
         <div class="container">
             <header>
                 <span class="title">
-                    <h1><big>NEMO</big></h1>
+                    <h1><big><b>NEMO</b></big></h1>
                 </span>
-                <p class="specs">1/2 lb, Baby Male 3-7 in<p>
+                <p class="specs"><b>1/2 lb, Baby Male 3-7 in</b><p>
                     <div class="box3 sb13">
                         <small>
-                            "I'm from... the ocean."
+                            <b>
+                                "I'm from... the ocean."
+                            </b>
                         </small>
                     </div>
                 <p>
@@ -39,16 +41,18 @@
               <br>
               <p>
                   <span class="highlightme">
-                      Species: Clownfish
-                      <br>
-                      Home: Great Barrier Reef
-                      <br>
-                      Clownfish are usually found in warm waters and live in anemone. 
-                      Clownfish eggs are guarded by the parent until they hatch. 
-                      They are all born male and whhen they turn female they can never go back to being male. 
-                      Male clownfish, like Nemo's father Marlin, are the primary caretakers and the female fish only help ocassionally. 
-                      Clownfish communicate by making popping and clicking noises.
-                  </span>    
+                      <b>
+                          Species: Clownfish
+                          <br>
+                          Home: Great Barrier Reef
+                          <br>
+                          Clownfish are usually found in warm waters and live in anemone. 
+                          Clownfish eggs are guarded by the parent until they hatch. 
+                          They are all born male and whhen they turn female they can never go back to being male. 
+                          Male clownfish, like Nemo's father Marlin, are the primary caretakers and the female fish only help ocassionally. 
+                          Clownfish communicate by making popping and clicking noises.
+                        </b>
+                    </span>    
               </p>
             <!--Adjust As Needed Based On Blurb Length-->
             <br>
