--- a/nigel.html
+++ b/nigel.html
@@ -15,12 +15,14 @@
         <div class="container">
             <header>
                 <span class="title">
-                    <h1><big>NIGEL</big></h1>
+                    <h1><big><b>NIGEL</b></big></h1>
                 </span>
-                <p class="specs">7-14 lbs, Adult Male, 3-4ft<p>
+                <p class="specs"><b>7-14 lbs, Adult Male, 3-4ft</b><p>
                     <div class="box3 sb13">
                         <small>
+                            <b>
                             “Sorry if I ever took a snap at you. Fish gotta swim, birds gotta eat.”
+                        </b>
                         </small>
                     </div>
                 <p>
@@ -40,12 +42,14 @@
                 <br>
                 <p>
                     <span class="highlightme">
-                        Species: Pelican <br>
-                        Home: Atlantic, Pacific, and Gulf Coasts <br>
-                        The Pelican is one of the largest birds in the world. They can be found on every continent except for Antarctica, 
-                        although they prefer warmer areas so they live in temperate and tropical areas and avoid cold areas. 
-                        They are characterized by a long beak and are best known for large pouches of skin hanging down from their bills. 
-                        These pouches or "gular sac" are used to scoop up their prey from the water and drain the water before swallowing.
+                        <b>
+                            Species: Pelican <br>
+                            Home: Atlantic, Pacific, and Gulf Coasts <br>
+                            The Pelican is one of the largest birds in the world. They can be found on every continent except for Antarctica, 
+                            although they prefer warmer areas so they live in temperate and tropical areas and avoid cold areas. 
+                            They are characterized by a long beak and are best known for large pouches of skin hanging down from their bills. 
+                            These pouches or "gular sac" are used to scoop up their prey from the water and drain the water before swallowing.
+                        </b>
                     </span>
                 </p>
                 <br>
