--- a/squirt.html
+++ b/squirt.html
@@ -15,12 +15,14 @@
         <div class="container">
             <header>
                 <span class="title">
-                    <h1><big>SQUIRT</big></h1>
+                    <h1><big><b>SQUIRT</b></big></h1>
                 </span>
-                <p class="specs">1/2 lb, Baby Male 2 in<p>
+                <p class="specs"><b>1/2 lb, Baby Male 2 in</b><p>
                     <div class="box3 sb13">
                         <small>
-                            "Remember: rip it, roll it, and punch it."
+                            <b>
+                                "Remember: rip it, roll it, and punch it."
+                            </b>
                         </small>
                     </div>
                 <p>
@@ -39,16 +41,18 @@
               <br>
               <p>
                   <span class="highlightme">
-                      Species: Sea Turtle
-                      <br>
-                      Home: Great Barrier Reef
-                      <br>
-                      Sea turtles are a migratory species and can be found all around the world in cold waters to warm beaches. 
-                      Sea turtles mate at sea, then come ashore on beaches to lay their eggs. 
-                      After laying their eggs in a hole in the sand the females go back to sea. 
-                      After 60 days the baby sea turtles hatch and have to make the dangerous journey from the nest to the water. 
-                      Natural light at the horizon guides the hatchlings to the ocean. 
-                      Once in the water they go out to survive and grow to be adult sea turtles eventually.
+                      <b>
+                        Species: Sea Turtle
+                        <br>
+                        Home: Great Barrier Reef
+                        <br>
+                        Sea turtles are a migratory species and can be found all around the world in cold waters to warm beaches. 
+                        Sea turtles mate at sea, then come ashore on beaches to lay their eggs. 
+                        After laying their eggs in a hole in the sand the females go back to sea. 
+                        After 60 days the baby sea turtles hatch and have to make the dangerous journey from the nest to the water. 
+                        Natural light at the horizon guides the hatchlings to the ocean. 
+                        Once in the water they go out to survive and grow to be adult sea turtles eventually.
+                    </b>
                   </span>    
               </p>
             <!--Adjust As Needed Based On Blurb Length-->
