switching nigel and pelican picture palcement

--- a/nigel.html
+++ b/nigel.html
@@ -30,13 +30,13 @@
             </header>
 
             <div class="img2">
-                <img height="500" width="650" src="pelican.png" alt="Pelican!"/>
+                <img height="500" width="650" src="nigel.png" alt="NIGEL!"/>
             </div>
 
             <hr>
             <main>
                 <div class="img1">
-                    <img height="500" width=auto src="nigel.png" alt="NIGEL!"/>
+                    <img height="500" width=auto src="pelican.png" alt="PELICAN!"/>
                 </div>
                 <br>
                 <br>
